--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -1472,6 +1472,252 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df.describe()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 300
+        },
+        "id": "_G8dDdNqY4E8",
+        "outputId": "c4fa722c-56e4-4bd7-d254-d831f2335287"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "       customer_id   postal_code     order_id  customer_id.1   order_id.1  \\\n",
+              "count  9569.000000   9416.000000  9569.000000    9569.000000  9569.000000   \n",
+              "mean    282.910962  52225.007116  5107.539450     282.910962  5107.539450   \n",
+              "std     199.763947  29619.544418  2043.449403     199.763947  2043.449403   \n",
+              "min       1.000000   1105.000000  1001.000000       1.000000  1001.000000   \n",
+              "25%     127.000000  27409.000000  3393.000000     127.000000  3393.000000   \n",
+              "50%     253.000000  48295.000000  5577.000000     253.000000  5577.000000   \n",
+              "75%     376.000000  79923.000000  6829.000000     376.000000  6829.000000   \n",
+              "max     800.000000  99812.000000  8147.000000     800.000000  8147.000000   \n",
+              "\n",
+              "        product_id     quantity  product_id.1  \n",
+              "count  9569.000000  9513.000000   9569.000000  \n",
+              "mean    106.736650     3.453380    106.736650  \n",
+              "std       3.694805     4.393894      3.694805  \n",
+              "min     101.000000     1.000000    101.000000  \n",
+              "25%     104.000000     1.000000    104.000000  \n",
+              "50%     107.000000     1.000000    107.000000  \n",
+              "75%     110.000000     4.000000    110.000000  \n",
+              "max     114.000000    20.000000    114.000000  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-2d049405-b427-4ccc-b434-72c4803ad52e\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>customer_id</th>\n",
+              "      <th>postal_code</th>\n",
+              "      <th>order_id</th>\n",
+              "      <th>customer_id.1</th>\n",
+              "      <th>order_id.1</th>\n",
+              "      <th>product_id</th>\n",
+              "      <th>quantity</th>\n",
+              "      <th>product_id.1</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>9569.000000</td>\n",
+              "      <td>9416.000000</td>\n",
+              "      <td>9569.000000</td>\n",
+              "      <td>9569.000000</td>\n",
+              "      <td>9569.000000</td>\n",
+              "      <td>9569.000000</td>\n",
+              "      <td>9513.000000</td>\n",
+              "      <td>9569.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>282.910962</td>\n",
+              "      <td>52225.007116</td>\n",
+              "      <td>5107.539450</td>\n",
+              "      <td>282.910962</td>\n",
+              "      <td>5107.539450</td>\n",
+              "      <td>106.736650</td>\n",
+              "      <td>3.453380</td>\n",
+              "      <td>106.736650</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>199.763947</td>\n",
+              "      <td>29619.544418</td>\n",
+              "      <td>2043.449403</td>\n",
+              "      <td>199.763947</td>\n",
+              "      <td>2043.449403</td>\n",
+              "      <td>3.694805</td>\n",
+              "      <td>4.393894</td>\n",
+              "      <td>3.694805</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1105.000000</td>\n",
+              "      <td>1001.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1001.000000</td>\n",
+              "      <td>101.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>101.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>127.000000</td>\n",
+              "      <td>27409.000000</td>\n",
+              "      <td>3393.000000</td>\n",
+              "      <td>127.000000</td>\n",
+              "      <td>3393.000000</td>\n",
+              "      <td>104.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>104.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>253.000000</td>\n",
+              "      <td>48295.000000</td>\n",
+              "      <td>5577.000000</td>\n",
+              "      <td>253.000000</td>\n",
+              "      <td>5577.000000</td>\n",
+              "      <td>107.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>107.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>376.000000</td>\n",
+              "      <td>79923.000000</td>\n",
+              "      <td>6829.000000</td>\n",
+              "      <td>376.000000</td>\n",
+              "      <td>6829.000000</td>\n",
+              "      <td>110.000000</td>\n",
+              "      <td>4.000000</td>\n",
+              "      <td>110.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>800.000000</td>\n",
+              "      <td>99812.000000</td>\n",
+              "      <td>8147.000000</td>\n",
+              "      <td>800.000000</td>\n",
+              "      <td>8147.000000</td>\n",
+              "      <td>114.000000</td>\n",
+              "      <td>20.000000</td>\n",
+              "      <td>114.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2d049405-b427-4ccc-b434-72c4803ad52e')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-2d049405-b427-4ccc-b434-72c4803ad52e button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-2d049405-b427-4ccc-b434-72c4803ad52e');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [],
       "metadata": {
