--- a/Lab4.ipynb
+++ b/Lab4.ipynb
@@ -2149,7 +2149,7 @@
         "id": "BtxOWvFlKzgE"
       },
       "source": [
-        "## Clean up the data\n",
+        "## Clean up the data (Lab 3)\n",
         "Did you notice anything unusual about the \"house\" amounts? \n",
         "\n",
         "How about the handset price and income?"
